[package]
name = "parcandidates"
version = "0.1.0"
authors = ["алый <iseurie@gmail.com>"]

[dependencies]
select          = "0.4"
tokio-core      = "0.1"
hyper           = "0.11"
reqwest         = "0.8"
regex           = "0.2"
futures			= "0.1"
num_cpus		= { version = "1.0", optional = true }
chan			= { version = "0.1", optional = true }

[features]
default = []
pooling = ["num_cpus", "chan"]
